added new image and changed colors

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         </div>
     </div>
 
+<!-- Hero Section-->
+<div class="Hero">
+        <img src="Images/IMG_0392.jpg" alt="Scenic photo">
+</div>
+
 <!-- About Me Section-->
     <div class="About_Me">
         <h1> About Me </h1>
